--- a/elastic-agent/templates/rbac.yaml
+++ b/elastic-agent/templates/rbac.yaml
@@ -3,10 +3,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: elastic-agent
+  labels:
+    {{- include "elastic-agent.labels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
     name: elastic-agent
-    namespace: kube-system
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
   name: elastic-agent
@@ -15,12 +17,13 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  namespace: kube-system
   name: elastic-agent
+  labels:
+    {{- include "elastic-agent.labels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
     name: elastic-agent
-    namespace: kube-system
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
   name: elastic-agent
@@ -30,11 +33,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: elastic-agent-kubeadm-config
-  namespace: kube-system
+  labels:
+    {{- include "elastic-agent.labels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
     name: elastic-agent
-    namespace: kube-system
+    namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
   name: elastic-agent-kubeadm-config
@@ -45,7 +49,7 @@ kind: ClusterRole
 metadata:
   name: elastic-agent
   labels:
-    k8s-app: elastic-agent
+    {{- include "elastic-agent.labels" . | nindent 4 }}
 rules:
   - apiGroups: [""]
     resources:
@@ -91,10 +95,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: elastic-agent
-  # should be the namespace where elastic-agent is running
-  namespace: kube-system
   labels:
-    k8s-app: elastic-agent
+    {{- include "elastic-agent.labels" . | nindent 4 }}
 rules:
   - apiGroups:
       - coordination.k8s.io
@@ -106,9 +108,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: elastic-agent-kubeadm-config
-  namespace: kube-system
   labels:
-    k8s-app: elastic-agent
+    {{- include "elastic-agent.labels" . | nindent 4 }}
 rules:
   - apiGroups: [""]
     resources:
