--- a/elastic-agent/templates/configmap.yaml
+++ b/elastic-agent/templates/configmap.yaml
@@ -4,7 +4,7 @@ kind: ConfigMap
 metadata:
   name: agent-node-datastreams
   labels:
-    k8s-app: elastic-agent
+    {{- include "elastic-agent.labels" . | nindent 4 }}
 data:
   agent.yml: |-
     outputs:
