--- a/bitbucket-pipelines-kubernetes-runner/templates/secret.yaml
+++ b/bitbucket-pipelines-kubernetes-runner/templates/secret.yaml
@@ -4,12 +4,12 @@ metadata:
   name: {{ include "bitbucket-pipelines-kubernetes-runner.fullname" . }}
   labels:
     {{- include "bitbucket-pipelines-kubernetes-runner.labels" . | nindent 4 }}
-spec:
+data:
   {{- with .Values.conf }}
-  ACCOUNT_UUID: {{ .account_uuid }}
-  REPOSITORY_UUID: {{ .repository_uuid }}
-  RUNNER_UUID: {{ .runner_uuid }}
-  RUNTIME_PREREQUISITES_ENABLED: "true"
-  OAUTH_CLIENT_ID: {{ .oauth_client_id }}
-  OAUTH_CLIENT_SECRET: {{ .oauth_client_secret }}
+  ACCOUNT_UUID: {{ .account_uuid | b64enc | qoute }}
+  REPOSITORY_UUID: {{ .repository_uuid | b64enc | qoute }}
+  RUNNER_UUID: {{ .runner_uuid | b64enc | qoute }}
+  RUNTIME_PREREQUISITES_ENABLED: "dHJ1ZQ=="
+  OAUTH_CLIENT_ID: {{ .oauth_client_id | b64enc | qoute }}
+  OAUTH_CLIENT_SECRET: {{ .oauth_client_secret | b64enc | qoute }}
   {{- end }}
