--- a/bitbucket-pipelines-kubernetes-runner/templates/secret.yaml
+++ b/bitbucket-pipelines-kubernetes-runner/templates/secret.yaml
@@ -6,10 +6,10 @@ metadata:
     {{- include "bitbucket-pipelines-kubernetes-runner.labels" . | nindent 4 }}
 data:
   {{- with .Values.conf }}
-  ACCOUNT_UUID: {{ .account_uuid | b64enc | qoute }}
-  REPOSITORY_UUID: {{ .repository_uuid | b64enc | qoute }}
-  RUNNER_UUID: {{ .runner_uuid | b64enc | qoute }}
+  ACCOUNT_UUID: {{ .account_uuid | b64enc | quote }}
+  REPOSITORY_UUID: {{ .repository_uuid | b64enc | quote }}
+  RUNNER_UUID: {{ .runner_uuid | b64enc | quote }}
   RUNTIME_PREREQUISITES_ENABLED: "dHJ1ZQ=="
-  OAUTH_CLIENT_ID: {{ .oauth_client_id | b64enc | qoute }}
-  OAUTH_CLIENT_SECRET: {{ .oauth_client_secret | b64enc | qoute }}
+  OAUTH_CLIENT_ID: {{ .oauth_client_id | b64enc | quote }}
+  OAUTH_CLIENT_SECRET: {{ .oauth_client_secret | b64enc | quote }}
   {{- end }}
