--- a/bitbucket-pipelines-kubernetes-runner/templates/deployment.yaml
+++ b/bitbucket-pipelines-kubernetes-runner/templates/deployment.yaml
@@ -32,6 +32,8 @@ spec:
           imagePullPolicy: {{ .image.pullPolicy }}
           resources:
             {{- toYaml .resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .securityContext | nindent 12 }}
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -49,6 +51,8 @@ spec:
           imagePullPolicy: {{ .image.pullPolicy }}
           resources:
             {{- toYaml .resources | nindent 12 }}
+          securityContext:
+            {{- toYaml .securityContext | nindent 12 }}
           volumeMounts:
             - name: tmp
               mountPath: /tmp
