--- a/bitbucket-pipelines-kubernetes-runner/values.yaml
+++ b/bitbucket-pipelines-kubernetes-runner/values.yaml
@@ -34,9 +34,10 @@ dind:
   image:
     repository: docker
     pullPolicy: IfNotPresent
-    tag: 20.10.7-dind-rootless
+    tag: 20.10.14-dind
   resources: {}
-  securityContext: {}
+  securityContext:
+    privileged: true
 
 
 serviceAccount:
